@@ -159,33 +159,6 @@ setSwMode()
     done
 }
 
-setLanWan()
-{
-if [ "$SWITCH_MODE" = "2" ]; then
-    wan_port=`nvram_get 2860 wan_port`
-    tv_port=`nvram_get 2860 tv_port`
-    if [ "$wan_port" = "0" ]; then
-	if [ "$tv_port" = "1" ]; then
-	    echo '##### config vlan partition (WWLLL) #####'
-	    config-vlan.sh $SWITCH_MODE WWLLL
-	else
-	    echo '##### config vlan partition (WLLLL) #####'
-	    config-vlan.sh $SWITCH_MODE WLLLL
-	fi
-    else
-	if [ "$tv_port" = "1" ]; then
-	    echo '##### config vlan partition (LLLWW) #####'
-	    config-vlan.sh $SWITCH_MODE LLLWW
-	else
-	    echo '##### config vlan partition (LLLLW) #####'
-	    config-vlan.sh $SWITCH_MODE LLLLW
-	fi
-    fi
-	echo '######## clear switch mac table  ########'
-        switch clear
-fi
-}
-
 resetLanWan()
 {
 if [ "$SWITCH_MODE" = "2" ]; then
@@ -201,6 +174,38 @@ if [ "$SWITCH_MODE" = "2" ]; then
     # with not correct configured from uboot
     $LOG "Reinit power mode for all switch ports"
     config-vlan.sh $SWITCH_MODE FFFFF
+fi
+}
+
+setLanWan()
+{
+if [ "$SWITCH_MODE" = "2" ]; then
+    if [ "$opmode" = "2" ] || [ "$opmode" = "4" ]; then
+	wan_port=`nvram_get 2860 wan_port`
+	tv_port=`nvram_get 2860 tv_port`
+	if [ "$wan_port" = "0" ]; then
+	    if [ "$tv_port" = "1" ]; then
+		echo '##### config vlan partition (WWLLL) #####'
+		config-vlan.sh $SWITCH_MODE WWLLL
+	    else
+		echo '##### config vlan partition (WLLLL) #####'
+		config-vlan.sh $SWITCH_MODE WLLLL
+	    fi
+	else
+	    if [ "$tv_port" = "1" ]; then
+		echo '##### config vlan partition (LLLWW) #####'
+		config-vlan.sh $SWITCH_MODE LLLWW
+	    else
+		echo '##### config vlan partition (LLLLW) #####'
+		config-vlan.sh $SWITCH_MODE LLLLW
+	    fi
+	fi
+    else
+		echo '##### config novlan partition (LLLLL) #####'
+		config-vlan.sh $SWITCH_MODE 0
+    fi
+    echo '######## clear switch mac table  ########'
+    switch clear
 fi
 }
 
